--- a/style.css
+++ b/style.css
@@ -446,15 +446,15 @@
   }
 
 .footerbar h2{
-	font-size: 10pt !important ;
+	font-size: 10pt  ;
 	font-family:Verdana, Geneva, Tahoma, sans-serif;
-	font-weight: 700 !important ;
+	font-weight: 700  ;
 }
 
 .footerbar p{
-	font-size: 6pt !important ;
+	font-size: 8pt  ;
 	font-family:Verdana, Geneva, Tahoma, sans-serif;
-	font-weight: 100 !important ;
+	font-weight: 300  ;
 	line-height: 30px;
 }
 
